--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "http://Hemant27031999.github.io/RoboSearch",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
